<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/splash_background">
        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attention"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/colorWhite"
            android:layout_margin="20dp" />

        <TextView
            android:id="@+id/tv_dialog_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/text_color_black"
            android:layout_below="@id/tv_title_dialog"
            android:text="@string/do_you_really_want_to_delete_all_the_items_this_operation_can_not_be_undone"
            android:textSize="14sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_dialog_body"
            android:measureWithLargestChild="true"
            android:orientation="horizontal"
            android:paddingTop="0dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dialog_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:textColor="@color/soft_blue"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_dialog_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:textColor="@color/soft_blue"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/delete" />
        </LinearLayout>
    </RelativeLayout>


    <ProgressBar
        android:id="@+id/progress_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>